--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "fs": "0.0.2",
     "path": "^0.12.7",
     "cors": "2.8.4",
-    "request": "2.81.0"
+    "request": "2.81.0",
+    "serve-favicon": "2.4.3"
   }
 }
